objects/myobj__c.object
<CustomObject>
    <fields>
        <fullName>Double__c</fullName>
        <label>Double</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Int__c</fullName>
        <label>Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TextArea__c</fullName>
        <label>TextArea</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>testnumb__c</fullName>
        <label>testnumb</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>myobj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>myobj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>myobjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>